# Copyright (C) 2016-2026 Grok Image Compression Inc.
#
# This source code is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version 3,
# as published by the Free Software Foundation.
#
# This source code is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "grokj2kcodec-sys"
authors = ["Grok Image Compression <support@grokcompression.com>"]
repository = "https://github.com/GrokImageCompression/grok"
links = "grokj2kcodec"
license = "AGPL-3.0-only"
description = "Bindings for Grok JPEG 2000 codec library"
version = "1.0.0"
categories = ["external-ffi-bindings", "multimedia::images"]
keywords = ["j2k", "jp2", "j2c", "jph", "jhc", "jpeg2000", "grok", "codec"]
edition = "2021"

[dependencies]
libc = "0.2"
grokj2k-sys = { path = ".." }

[build-dependencies]
pkg-config = "0.3.19"
bindgen = "0.72"

[lib]
name = "grokj2kcodec_sys"
path = "src/lib.rs"
